--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -43,11 +43,11 @@ jobs:
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           
-      - name: 自定义插件
+      - name: 自定义插件主题。
         run: |
           cd package
           mkdir openwrt-packages
-          cd openwrt-package
+          cd openwrt-packagese
           git clone shttps://github.com/trojan-gfw/trojan.git
       - name: Update feeds
         run: |
